test/libyul/yulSyntaxTests/bin_switch_case_long.yul
{
    switch codesize()
    case bin"00110011" {}
    case bin"111111110000000011111111000000001111111100000000111111110000000011111111000000001111111100000000111111110000000011111111000000001111111100000000111111110000000011111111000000001111111100000000111111110000000011111111000000001111111100000000111111110000000011111111000000001111111100000000" {}
}
// ----
// TypeError 3069: (59-352): String literal too long (36 > 32)
